Fixing Overflow Issue Mobile

--- a/sass/partials/_landing-page.scss
+++ b/sass/partials/_landing-page.scss
@@ -1,5 +1,8 @@
 body {
     background-color: black;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 
 .landing-page {
@@ -15,8 +18,8 @@ body {
     position: absolute;
     top: 0;
     bottom: 0;
-    // right: 0;
-    // left: 0;
+    right: 0;
+    left: 0;
 }
 
 // Body & Head
